# beamng-mcp

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  beamng-mcp.example.toml  pyproject.toml  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
beamng_extension/lua/ge/extensions/: beamngMcp.lua
beamng_extension/mod_info/beamng_mcp/: info.json
docs/: ARCHITECTURE.md  AUTONOMY.md  DEVELOPMENT.md  ROADMAP.md  SETUP.md  SOFTBODY_AUTHORING.md  TOOLS.md
examples/: client-config.json  rtx5090-onnx.toml  scenario.json
examples/cannon_car_wash/: README.md  TECHNICAL_ART.md  build_distribution.py  build_selector_prop.py  sync_scenario_outputs.py
examples/cannon_car_wash/authoring/: ericrolph_cannon_car_wash.geometry.json  ericrolph_cannon_car_wash.selector_handoff.json  ericrolph_cannon_car_wash.textures.json
examples/cannon_car_wash/blender/: cannon_car_wash.blend  create_cannon_car_wash.py
examples/cannon_car_wash/mod/: README.md  info.json
examples/cannon_car_wash/mod/mod_info/cannon_car_wash/: info.json  phase2_manifest.json  phase3_manifest.json  phase4_manifest.json
examples/cannon_car_wash/mod/scripts/cannon_car_wash/: modScript.lua
examples/cannon_car_wash/mod/vehicles/cannon_car_wash/: cannon_car_wash.jbeam  cannon_car_wash.selector_handoff.json  info.json  info_standard.json  main.materials.json  standard.pc
examples/cannon_car_wash/repository/: PROVENANCE.md  SUBMISSION.md  submission.json
examples/cannon_car_wash/telemetry/: cannon_car_wash_phase4_results.json  cannon_car_wash_selector_results.json
examples/cannon_car_wash/textures/: README.md  build_pbr_textures.py  cook_release_textures.py
examples/cannon_car_wash/validation/manifests/: phase2.json  phase3.json  phase4.json
src/beamng_mcp/: __init__.py  app.py  autodetect.py  beamng.py  bridge.py  cli.py  config.py  errors.py  installer.py  lua_bridge.py  mcp_adapter.py  models.py  runtime.py  safety.py  server.py  structural_models.py  vision.py
src/beamng_mcp/adapters/: __init__.py  beamngpy_adapter.py  lua_bridge.py
src/beamng_mcp/assets/: __init__.py
src/beamng_mcp/assets/blender/: softbody_export.py
src/beamng_mcp/services/: __init__.py  autonomy.py  blender.py  collada.py  jbeam.py  jobs.py  mods.py  staging.py  structural.py
src/beamng_mcp/vision/: __init__.py  control.py  geometry.py  interfaces.py  models.py  supervisor.py  watchdog.py
src/beamng_mcp/vision/backends/: __init__.py  base.py  onnx.py  opencv.py  segformer.py
tests/: live_support.py  test_autodetect_layout.py  test_autonomy.py  test_beamng_adapter.py  test_beamng_live.py  test_beamng_vision_live.py  test_beamngpy_api_compatibility.py  test_blender_exporter.py  test_blender_headless.py  test_blender_runtime.py  test_cannon_car_wash_assets.py  test_cannon_car_wash_distribution.py  test_cannon_car_wash_distribution_live.py  test_cannon_car_wash_phase2_live.py  test_cannon_car_wash_phase3_live.py  test_cannon_car_wash_phase3_lua_contract.py  test_cannon_car_wash_phase4_live.py  test_cannon_car_wash_selector_live.py  test_cannon_car_wash_selector_runtime_contract.py  test_cannon_car_wash_selector_runtime_live.py  test_cli.py  test_collada.py  test_core.py  test_jbeam.py  test_jobs.py  test_live_support.py  test_lua_bridge.py  test_lua_client.py  test_lua_contract.py  test_map_triggers.py  test_mcp_adapter.py  test_mcp_capability_gauntlet_live.py  test_mod_workspace_security.py  test_models.py  test_runtime_jobs.py  test_runtime_safety.py  test_safety.py  test_schema_hardening.py  test_server.py  test_softbody_pipeline_live.py  (+2 more)
tests/fixtures/: beamng_retail_vision_capture.lua  beamng_retail_vision_info.json  beamng_retail_vision_modScript.lua  blender_mcp_profile_probe.py  blender_softbody_smoke.py  blender_structural_ramp.py
(+47 files in other folders)
